syntax = "proto3";

option java_outer_classname = "GreeterServiceProto";
option java_package = "com.king.demo.grpc";

service GreeterService {
    rpc sayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}